[gd_scene load_steps=9 format=3 uid="uid://3m84vnwc60ul"]

[ext_resource type="Script" path="res://Scene/HighScore.gd" id="1_7i8bg"]
[ext_resource type="Texture2D" uid="uid://dbv12i7f5jec8" path="res://Art/Background DALLE.png" id="2_hmvkd"]
[ext_resource type="Shader" path="res://Scene/TitleShader.gdshader" id="3_5tytx"]
[ext_resource type="Theme" uid="uid://bqko71y06oli4" path="res://Art/Themes/FontTheme.tres" id="4_x2tgs"]
[ext_resource type="FontFile" uid="uid://bhpv1c7hykjgo" path="res://Art/fonts/Xolonium-Regular.ttf" id="5_djewn"]
[ext_resource type="Theme" uid="uid://cgs71wm4c5bna" path="res://Art/Themes/ButtonTheme.tres" id="6_qxiy7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dvoq"]
shader = ExtResource("3_5tytx")
shader_parameter/height = 5.0
shader_parameter/frequency = 5.0
shader_parameter/speed = 5.0

[sub_resource type="Theme" id="Theme_wwn5c"]
resource_local_to_scene = true
default_font = ExtResource("5_djewn")
default_font_size = 50

[node name="HighScore" type="Node2D"]
script = ExtResource("1_7i8bg")

[node name="BackgroundDalle" type="Sprite2D" parent="."]
position = Vector2(961.2, 544.15)
scale = Vector2(2.25594, 2.19501)
texture = ExtResource("2_hmvkd")
region_enabled = true
region_rect = Rect2(34.1705, 223.173, 858.495, 501.827)

[node name="Title" type="Label" parent="."]
material = SubResource("ShaderMaterial_3dvoq")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 318.0
offset_right = 1599.0
offset_bottom = 166.0
grow_horizontal = 2
theme = ExtResource("4_x2tgs")
theme_override_colors/font_color = Color(0.79097, 0.589717, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 135
text = "High Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 1143.0
offset_top = 855.0
offset_right = 1479.0
offset_bottom = 904.0
scale = Vector2(1.8, 2.3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_wwn5c")
theme_override_constants/separation = 25

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_qxiy7")
text = "Back"

[node name="Container" type="MarginContainer" parent="."]
offset_left = 145.0
offset_top = 188.0
offset_right = 1786.0
offset_bottom = 807.0

[node name="Table" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="FirstColumn" type="VBoxContainer" parent="Container/Table"]
layout_mode = 2

[node name="Names" type="Label" parent="Container/Table/FirstColumn"]
layout_mode = 2
theme = ExtResource("4_x2tgs")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 64
text = " "

[node name="SecondColumn" type="VBoxContainer" parent="Container/Table"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Scores" type="Label" parent="Container/Table/SecondColumn"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme = ExtResource("4_x2tgs")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 64
text = " "

[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back"]
